--- a/src/Components/SuperAdmins/super-admins.module.css
+++ b/src/Components/SuperAdmins/super-admins.module.css
@@ -1,9 +1,14 @@
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   cursor: pointer;
 }
 
 .h2 {
-  margin-left: 42%;
   padding: 2%;
   font-style: normal;
   font-weight: 700;
